trunk/Archive2/e6/bd2e9945e12dc9/output
main.cpp: In destructor 'virtual Derived::~Derived()':
main.cpp:3:23: error: use of deleted function 'static void Derived::operator delete(void*)'
    virtual ~Derived(){}                                                                      
                       ^
main.cpp:4:9: error: declared here
    void operator delete(void*) = delete;                                                     
         ^
main.cpp: In destructor 'virtual Derived::~Derived()':
main.cpp:3:23: error: use of deleted function 'static void Derived::operator delete(void*)'
    virtual ~Derived(){}                                                                      
                       ^
main.cpp:4:9: error: declared here
    void operator delete(void*) = delete;                                                     
         ^
